# py-weather-2

./: .dockerignore  .gitignore  LICENSE  README.md  classifiers.txt  demo-prompts.md  pyproject.toml  requirements.in  requirements.txt  setup.py  weather.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/cli/: main.py
src/py_weather_2/cli/: __init__.py  main.py
src/py_weather_2/core/: __init__.py  constants.py  location_service.py  models.py  weather_service.py
src/py_weather_2/web/: __init__.py  app.py
src/py_weather_2/web/routes/: __init__.py  location.py  weather.py
src/py_weather_2/web/templates/: index.html  weather.html
src/weather2/cli/: __init__.py  main.py
src/weather2/core/: __init__.py  weather_service.py
src/weather2/web/: app.py
src/weather2/web/routes/: __init__.py  location.py  weather.py
src/weather2/web/templates/: base.html  location.html
tests/: test_cli.py  test_location_service.py  test_weather_service.py
weather_app/: __init__.py  cli.py  constants.py  location_service.py  models.py  weather_service.py
