[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_weather_2"
version = "0.1.0"
description = "A Python CLI weather app"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Weather CLI Contributors" }
]
dynamic = ["dependencies", "classifiers"]

[project.urls]
"Bug Reports" = "https://github.com/devopsjester/py-weather-2/issues"
"Source" = "https://github.com/devopsjester/py-weather-2"

[project.scripts]
weather = "weather:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
classifiers = {file = ["classifiers.txt"]}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"