[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather2"
version = "2.1.0"
description = "A Python CLI and web app for weather information"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Weather CLI Contributors" }
]
dynamic = ["dependencies", "classifiers"]

[project.urls]
"Bug Reports" = "https://github.com/devopsjester/py-weather-2/issues"
"Source" = "https://github.com/devopsjester/py-weather-2"

[project.scripts]
weather = "weather2.cli.main:cli"
weather-web = "weather2.web.app:run_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
classifiers = {file = ["classifiers.txt"]}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"